--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.0",
     "dateformat": "^5.0.3",
     "js-md5": "^0.8.3",
+    "mime-types": "^2.1.35",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
     "primeicons": "^6.0.1",
