--- a/package.json
+++ b/package.json
@@ -1,65 +1,68 @@
 {
-  "name": "masamadre-admin",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "@lukemorales/query-key-factory": "^1.3.4",
-    "@tanstack/vue-query": "^5.40.0",
-    "@types/js-md5": "^0.7.2",
-    "@vee-validate/yup": "^4.11.8",
-    "@vueuse/core": "^10.5.0",
-    "axios": "^1.6.0",
-    "chart.js": "^4.4.0",
-    "dateformat": "^5.0.3",
-    "js-md5": "^0.8.3",
-    "mime-types": "^2.1.35",
-    "pinia": "^2.1.6",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.50.0",
-    "quill": "^1.3.7",
-    "truncate": "^3.0.0",
-    "uuid": "^9.0.1",
-    "vee-validate": "^4.11.8",
-    "vue": "^3.4.27",
-    "vue-advanced-cropper": "^2.8.8",
-    "vue-router": "^4.2.4",
-    "vuedraggable": "^4.1.0",
-    "yup": "^1.3.2",
-    "yup-locales": "^1.2.20",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/dateformat": "^5.0.2",
-    "@types/node": "^18.17.17",
-    "@types/uuid": "^9.0.7",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.0.6",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.4.5",
-    "vite": "^4.4.9",
-    "vue-tsc": "^2.0.19"
-  }
+    "name": "masamadre-admin",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p type-check \"build-only {@}\" --",
+        "preview": "vite preview",
+        "build-only": "vite build",
+        "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+        "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "format": "prettier --write src/",
+        "prepare": "husky"
+    },
+    "dependencies": {
+        "@lukemorales/query-key-factory": "^1.3.4",
+        "@tanstack/vue-query": "^5.40.0",
+        "@types/js-md5": "^0.7.2",
+        "@vee-validate/yup": "^4.11.8",
+        "@vueuse/core": "^10.5.0",
+        "axios": "^1.6.0",
+        "chart.js": "^4.4.0",
+        "dateformat": "^5.0.3",
+        "husky": "^9.0.11",
+        "js-md5": "^0.8.3",
+        "mime-types": "^2.1.35",
+        "pinia": "^2.1.6",
+        "pinia-plugin-persistedstate": "^3.2.0",
+        "primeicons": "^6.0.1",
+        "primevue": "^3.50.0",
+        "quill": "^1.3.7",
+        "truncate": "^3.0.0",
+        "uuid": "^9.0.1",
+        "vee-validate": "^4.11.8",
+        "vue": "^3.4.27",
+        "vue-advanced-cropper": "^2.8.8",
+        "vue-router": "^4.2.4",
+        "vuedraggable": "^4.1.0",
+        "yup": "^1.3.2",
+        "yup-locales": "^1.2.20",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-patch": "^1.3.3",
+        "@tsconfig/node18": "^18.2.2",
+        "@types/dateformat": "^5.0.2",
+        "@types/node": "^18.17.17",
+        "@types/uuid": "^9.0.7",
+        "@vitejs/plugin-vue": "^4.3.4",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "@vue/tsconfig": "^0.4.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.49.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
+        "eslint-plugin-vue": "^9.17.0",
+        "npm-run-all2": "^6.0.6",
+        "postcss": "^8.4.31",
+        "prettier": "^3.1.0",
+        "prettier-plugin-tailwindcss": "^0.5.7",
+        "tailwind-scrollbar": "^3.0.5",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.4.5",
+        "vite": "^4.4.9",
+        "vue-tsc": "^2.0.19"
+    }
 }
