--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
         "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
+        "lint-staged": "lint-staged",
         "prepare": "husky"
     },
     "dependencies": {
@@ -24,6 +25,7 @@
         "dateformat": "^5.0.3",
         "husky": "^9.0.11",
         "js-md5": "^0.8.3",
+        "lint-staged": "^15.2.7",
         "mime-types": "^2.1.35",
         "pinia": "^2.1.6",
         "pinia-plugin-persistedstate": "^3.2.0",
